--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,50 @@ body {
   /*
    * CSS image reference example.
    */
-  background-image: url('./images/bg-pattern.png');
+  /* background-image: url('./images/bg-pattern.png'); */
+}
+.gallery{
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
+  /* flex-flow: row wrap; */
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 10px;
+  width: 100%;
+}
+
+.card-item{
+  /* display: block; */
+    max-width:calc(100% / 6);
+  /* max-width:calc((100% / 6) - 50px); */
+  /* margin-right: 10px; */
+  margin-bottom: 10px;
+  height: 400px;
+  padding: 5px;
+  border: 1px solid gray;
+}
+
+.card-item:nth-child(6n){
+  margin-right: 0px;
+
+}
+
+.photo-card{
+  height: 100%;
+}
+
+.img-thumb{
+ height: 50%;
+}
+
+.card-img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;  
+
+}
+
+.stats{
+ height: 50%;
 }
