--- a/src/styles.css
+++ b/src/styles.css
@@ -1,61 +1,91 @@
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-
-  /*
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    /*
    * CSS image reference example.
    */
-  /* background-image: url('./images/bg-pattern.png'); */
-}
-.gallery{
-  display: flex;
-  justify-content: space-around;
-  align-self: center;
-  /* flex-flow: row wrap; */
-  flex-wrap: wrap;
-  list-style: none;
-  padding: 10px;
-  width: 100%;
+    /* background-image: url('./images/bg-pattern.png'); */
 }
 
-.card-item{
-
-  max-width:calc(100% / 6);
-  padding: 10px;
-  height: 400px;
-
-
+button {
+    background-color: #4141d8;
+    padding: 10px;
+    border: 1px solid #2a2a99;
+    border-radius: 5px;
+    font-weight: 700;
+    color: beige;
 }
 
-
-.photo-card{
-  height: 100%;
-  border: 1px solid gray;
-  padding: 5px;
+input[type='text'] {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid black;
 }
 
-.img-thumb{
- height: 50%;
+.header {
+    text-align: center;
 }
 
-.card-img{
+.search-form {
+    text-align: center;
+}
+
+.gallery {
+    display: flex;
+    justify-content: space-around;
+    align-self: center;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 10px;
+    width: 100%;
+}
+
+.card-item {
+    width: calc(100% / 6);
+    padding: 10px;
+    height: 400px;
+}
+
+.photo-card {
+    height: 100%;
+    border: 1px solid gray;
+    padding: 5px;
+    box-shadow: 2px 2px 4px gray;
+    border-radius: 3px;
+}
+
+.img-thumb {
+    height: 50%;
+    background-color: rgb(209, 204, 204);
+}
+
+.card-img {
     width: 100%;
     height: 100%;
-    object-fit: contain;  
-
+    object-fit: contain;
 }
 
-.stats{
- height: 50%;
+.stats {
+    height: 50%;
+}
+
+.stats .material-icons {
+    font-size: 18px;
+}
+
+.btn-wrapper {
+    text-align: center;
+}
+
+.is-hidden {
+    display: none;
 }
