--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ button {
     color: beige;
 }
 
-input[type="text"] {
+input {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid black;
