--- a/src/templates/imageCard.hbs
+++ b/src/templates/imageCard.hbs
@@ -2,7 +2,7 @@
 <li class="card-item">
     <div class="photo-card">
         <div class="img-thumb">
-            <img src="{{webformatURL}}" alt="{{tags}}" class="card-img" />
+            <img data-big-img="{{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" class="card-img" />
         </div>
 
         <div class="stats">
