--- a/src/templates/imageCard.hbs
+++ b/src/templates/imageCard.hbs
@@ -1,8 +1,8 @@
 {{#each this}}
-<li class="card-item">
+<li class="photo-card-wrapper">
     <div class="photo-card">
-        <div class="img-thumb">
-            <img data-big-img="{{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" class="card-img" />
+        <div class="photo-thumb">
+            <img data-big-img="{{largeImageURL}}" src="{{webformatURL}}" alt="{{tags}}" class="photo" />
         </div>
 
         <div class="stats">
