--- a/src/styles.css
+++ b/src/styles.css
@@ -10,10 +10,6 @@ html {
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-    /*
-   * CSS image reference example.
-   */
-    /* background-image: url('./images/bg-pattern.png'); */
 }
 
 button {
@@ -49,7 +45,7 @@ input {
     width: 100%;
 }
 
-.card-item {
+.photo-card-wrapper {
     width: calc(100% / 6);
     padding: 10px;
     height: 400px;
@@ -63,12 +59,12 @@ input {
     border-radius: 3px;
 }
 
-.img-thumb {
+.photo-thumb {
     height: 50%;
     background-color: rgb(209, 204, 204);
 }
 
-.card-img {
+.photo {
     width: 100%;
     height: 100%;
     object-fit: contain;
