--- a/src/styles.css
+++ b/src/styles.css
@@ -61,13 +61,19 @@ input {
 
 .photo-thumb {
     height: 50%;
-    background-color: rgb(209, 204, 204);
+    background-color: rgb(209, 204, 204); 
 }
 
 .photo {
     width: 100%;
     height: 100%;
     object-fit: contain;
+    transition: transform .25s ease-in-out;
+}
+
+.photo:hover{
+    cursor: pointer;
+    transform: scale(1.1);
 }
 
 .stats {
